Keep working on it

--- a/chats.html
+++ b/chats.html
@@ -41,7 +41,10 @@
           <div class="sorry-badge">
             <i class="fab fa-itunes-note fa-lg"></i>
           </div>
-          <div><i class="fas fa-cog fa-lg"></i></div>
+          <a href="settings.html"
+            ><div><i class="fas fa-cog fa-lg"></i></div>
+           
+          </a>
         </div>
       </div>
     </header>
@@ -81,7 +84,8 @@
         <i class="far fa-user"></i>
       </a>
       <a href="chats.html">
-        <i class="fas fa-comment"> <div class="badge__number--red">1</div></i>
+        <i class="fas fa-comment"> 
+          <div class="badge__number--red">1</div></i>
       </a>
       <a href="find.html">
         <i class="fas fa-search"></i>
