--- a/find.html
+++ b/find.html
@@ -33,8 +33,10 @@
         </div>
         <div class="friends-header__column-second find__header">
           <div><i class="fas fa-search fa-lg"></i></div>
-          <div><i class="fas fa-cog fa-lg"></i></div>
-          <div class="badge__dot__cog--red"></div>
+          <a href="settings.html"
+            ><div><i class="fas fa-cog fa-lg"></i></div>
+            <div class="badge__dot__cog--red"></div>
+          </a>
         </div>
       </div>
     </header>
@@ -42,30 +44,61 @@
     <main class="find-contents">
       <div class="find-contents__header">
         <div class="find-contents__header__column">
-          <i class="fas fa-qrcode fa-lg"> </i>
+          <i class="fas fa-qrcode fa-2x"> </i>
           <div class="qrcode">QR Code</div>
         </div>
         <div class="find-contents__header__column">
-          <i class="far fa-address-book fa-lg"> </i>
-          <div class="phonebook">Add by Contacts</div>
+          <i class="far fa-address-book fa-2x"> </i>
+          <div class="phonebook">Add by <br />Contacts</div>
         </div>
         <div class="find-contents__header__column">
-          <i class="fas fa-fingerprint fa-lg"> </i>
+          <i class="fas fa-fingerprint fa-2x"> </i>
           <div class="id">Add by ID</div>
         </div>
         <div class="find-contents__header__column">
-          <i class="far fa-envelope fa-lg"> </i>
+          <i class="far fa-envelope fa-2x"> </i>
           <div class="invite">Invite</div>
         </div>
       </div>
 
       <div class="find-contents__content">
         <div class="find-contents__content-column">
-          <div class="name_category">Recommended Friends</div>
+          <div class="name_category__find">Recommended Friends</div>
         </div>
         <div class="find-contents__content-column">
           <div class="recommended__message">
             You have no recommended friends.
+          </div>
+        </div>
+      </div>
+
+      <div class="open-chat">
+        <div class="open-chat__header">
+          <div class="open-chat__header__column__title">Open Chat</div>
+          <div class="open-chat__header__column__nav">
+            Go to Openchat Home
+            <i class="fas fa-chevron-right fa-xs"></i>
+          </div>
+        </div>
+
+        <div class="open-chat__content">
+          <div class="open-chat__content__column">
+            <div class="open-chat-title">
+              #BOBA
+            </div>
+            <div class="open-chat-hashtag">#COCONUT #BOBA #INFO</div>
+            <div class="open-chat-info">
+              <img src="https://bit.ly/2CtTUF4" class="open-chat-owner" />
+              <span class="open-chat-member">501 members |</span>
+              <span class="open-chat-status">Active</span>
+            </div>
+          </div>
+
+          <div class="open-chat__content__column">
+            <div class="open-chat-pic">
+              <img src="https://bit.ly/2CDux3x" class="open-chat-real-pic" />
+            </div>
+            <span class="number-like"> <i class="fas fa-heart"></i>467</span>
           </div>
         </div>
       </div>
