--- a/friends.html
+++ b/friends.html
@@ -34,7 +34,10 @@
         <div class="friends-header__column-second">
           <div><i class="fas fa-search fa-lg"></i></div>
           <div><i class="fab fa-itunes-note fa-lg"></i></div>
-          <div><i class="fas fa-cog fa-lg"></i></div>
+          <a href="settings.html"
+            ><div><i class="fas fa-cog fa-lg"></i></div>
+           
+          </a>
         </div>
       </div>
 
