Finished final projects

--- a/chats.html
+++ b/chats.html
@@ -80,7 +80,7 @@
     </main>
 
     <nav class="navigation">
-      <a href="friends.html">
+      <div class="nav__icons"> <a href="friends.html">
         <i class="far fa-user"></i>
       </a>
       <a href="chats.html">
@@ -98,9 +98,14 @@
           <i class="far fa-circle"></i>
           <div class="badge__dot--red"></div>
         </div>
-      </a>
+      </a></div>
+     
     </nav>
 
+    <div class="screen__size">
+      Your screen is too big :( <br>
+      Please control your screen size again!
+  </div>
     <script
       src="https://kit.fontawesome.com/fa635f730e.js"
       crossorigin="anonymous"
