--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
       </form>
     </main>
 
+    <div class="screen__size">
+      Your screen is too big :( <br />
+      Please control your screen size again!
+    </div>
+
     <script
       src="https://kit.fontawesome.com/fa635f730e.js"
       crossorigin="anonymous"
