--- a/more.html
+++ b/more.html
@@ -99,25 +99,32 @@
     </div>
 
     <nav class="navigation">
-      <a href="friends.html">
-        <i class="far fa-user"></i>
-      </a>
-      <a href="chats.html">
-        <i class="far fa-comment"> </i>
-      </a>
-      <a href="find.html">
-        <i class="fas fa-search"></i>
-      </a>
+      <div class="nav__icons">
+        <a href="friends.html">
+          <i class="far fa-user"></i>
+        </a>
+        <a href="chats.html">
+          <i class="far fa-comment"> </i>
+        </a>
+        <a href="find.html">
+          <i class="fas fa-search"></i>
+        </a>
 
-      <a href="more.html">
-        <div class="dot__icon">
-          <i class="fas fa-circle"></i>
-          <i class="fas fa-circle"></i>
-          <i class="fas fa-circle"></i>
-          <div class="badge__dot--red"></div>
-        </div>
-      </a>
+        <a href="more.html">
+          <div class="dot__icon">
+            <i class="fas fa-circle"></i>
+            <i class="fas fa-circle"></i>
+            <i class="fas fa-circle"></i>
+            <div class="badge__dot--red"></div>
+          </div>
+        </a>
+      </div>
     </nav>
+
+    <div class="screen__size">
+      Your screen is too big :( <br />
+      Please control your screen size again!
+    </div>
 
     <script
       src="https://kit.fontawesome.com/fa635f730e.js"
