--- a/settings.html
+++ b/settings.html
@@ -27,48 +27,57 @@
     </div>
 
     <header class="settings">
-      <div><i class="fas fa-chevron-left fa-lg"></i></div>
-      <div class="settings__title">Settings</div>
-      <div><i class="fas fa-search fa-lg"></i></div>
+      <a href="more.html"
+        ><div class="settings__column">
+          <i class="fas fa-chevron-left fa-lg"></i></div
+      ></a>
+      <div class="settings__title settings__column">Settings</div>
+      <div class="settings__column"><i class="fas fa-search fa-lg"></i></div>
     </header>
 
     <main class="list">
-      <div class="list__column">
-        <span><i class="fas fa-bullhorn"></i></span>
-        <span>Notices</span>
+      <div class="list__column icon_list">
+        <div><i class="fas fa-bullhorn"></i></div>
+        <div><i class="fas fa-flask"></i></div>
+        <div><i class="fas fa-info-circle"></i></div>
       </div>
-      <div class="list__column">
-        <span><i class="fas fa-flask"></i></span>
-        <span>Coconut Lab</span>
-      </div>
-      <div class="list__column last">
+      <div class="list__column title_list">
+        <div>Notices</div>
+        <div>Coconut Lab</div>
         <div class="weare__set">
-          <span><i class="fas fa-info-circle"></i></span>
           <span>Version</span>
-          <span>Latest Version</span>
+          <span class="only">Latest Version</span>
         </div>
       </div>
     </main>
-    <nav class="navigation">
-      <a href="friends.html">
-        <i class="far fa-user"></i>
-      </a>
-      <a href="chats.html">
-        <i class="far fa-comment"> </i>
-      </a>
-      <a href="find.html">
-        <i class="fas fa-search"></i>
-      </a>
 
-      <a href="more.html">
-        <div class="dot__icon">
-          <i class="fas fa-circle"></i>
-          <i class="fas fa-circle"></i>
-          <i class="fas fa-circle"></i>
-          <div class="badge__dot--red"></div>
-        </div>
-      </a>
+    <nav class="navigation">
+      <div class="nav__icons">
+        <a href="friends.html">
+          <i class="far fa-user"></i>
+        </a>
+        <a href="chats.html">
+          <i class="far fa-comment"> </i>
+        </a>
+        <a href="find.html">
+          <i class="fas fa-search"></i>
+        </a>
+
+        <a href="more.html">
+          <div class="dot__icon">
+            <i class="fas fa-circle"></i>
+            <i class="fas fa-circle"></i>
+            <i class="fas fa-circle"></i>
+            <div class="badge__dot--red"></div>
+          </div>
+        </a>
+      </div>
     </nav>
+
+    <div class="screen__size">
+      Your screen is too big :( <br />
+      Please control your screen size again!
+    </div>
 
     <script
       src="https://kit.fontawesome.com/fa635f730e.js"
