--- a/chat.html
+++ b/chat.html
@@ -85,7 +85,8 @@
 
     <div class="screen__size">
       Your screen is too big :( <br />
-      Please control your screen size again!
+      Please control your screen size again!<br />
+      (This page doesn't support landscape mode.)
     </div>
 
     <script
