--- a/friends.html
+++ b/friends.html
@@ -132,9 +132,10 @@
     </div>
 
     <div class="screen__size">
-      Your screen is too big :( <br>
-      Please control your screen size again!
-  </div>
+      Your screen is too big :( <br />
+      Please control your screen size again!<br />
+      (This page doesn't support landscape mode.)
+    </div>
 
     <script
       src="https://kit.fontawesome.com/fa635f730e.js"
