--- a/settings.html
+++ b/settings.html
@@ -76,9 +76,9 @@
 
     <div class="screen__size">
       Your screen is too big :( <br />
-      Please control your screen size again!
+      Please control your screen size again!<br />
+      (This page doesn't support landscape mode.)
     </div>
-
     <script
       src="https://kit.fontawesome.com/fa635f730e.js"
       crossorigin="anonymous"
