--- a/more.html
+++ b/more.html
@@ -43,7 +43,7 @@
     </header>
 
     <div class="more-contents">
-      <div class="chat__wrap">
+      <div class="chat__wrap moana__wrap">
         <div class="set">
           <img
             src="https://bit.ly/2CtTUF4"
