--- a/friends.html
+++ b/friends.html
@@ -90,7 +90,7 @@
               <span class="name__friend">Pua</span>
             </div>
             <div class="friends-contents-other-profile friend__column-third">
-                <span class="music">How far I'll go - Auli'i Cravalho 
+                <span class="music">How far I'll go 
                     <i class="fas fa-play fa-xs"></i> </span>
               </div>
            </div>
