--- a/chat.html
+++ b/chat.html
@@ -8,7 +8,7 @@
   </head>
 
   <body class="chat__whole">
-    <div class="status-bar chat__header">
+    <div class="status-bar status-bar__chat">
       <div class="status-bar__column status-bar__column-first">
         <span>No Service</span>
         <i class="fas fa-wifi fa-sm"></i>
@@ -26,7 +26,7 @@
       </div>
     </div>
 
-    <header class="settings chat__header">
+    <header class="chat__header">
       <a href="chats.html"
         ><div class="settings__column">
           <i class="fas fa-chevron-left fa-lg"></i></div
